# script2stlite

./: .gitignore  AUDIT_REPORT.md  README.md  app.py  my_simple_app.html  pyproject.toml  run_tests.sh
example/Example_0_simple_app/: README.md  functions.py  home.py  my_simple_app.html  settings.yaml
example/Example_10_MannKS/: MannKenSen_Analysis_App.html  README.md  main.py  requirements.txt  settings.yaml
example/Example_6_vizzu/: README.md  (+3 more)
script2stlite/: __init__.py  discovery.py  functions.py  script2stlite.py
stlite_versions/: js.yaml  pyodide.yaml  stylesheet.yaml
tests/: generated_Example_0_simple_app.html  generated_Example_1_multi_page_image_editor.html  generated_Example_2_bitcoin_price_app.html  generated_Example_3_streamlit_chect_sheet.html  generated_Example_4_echarts_demo.html  generated_Example_5_PixelHue.html  generated_Example_6_vizzu.html  generated_Example_7_shared_environment_installer_app.html  generated_Example_7_shared_environment_user_app.html  generated_Example_7_shared_worker_counter_control_app.html  generated_Example_7_shared_worker_counter_display_app.html  generated_Example_8_file_persistence.html  generated_Example_9_idbfs_file_browser.html  generated_test_app.html  test_audit_scenarios.py  test_coverage_functions.py  test_coverage_script2stlite.py  test_discovery.py  test_error_handling.py  test_example_generation.py  test_functions.py  test_ignore.py  test_more_functions.py  test_multipage.py  test_one_step.py  test_requirements.py  test_script2stlite.py  test_shortcut.py  test_versions.py  test_webapp_generation.py  tests.md
(+54 files in other folders)
